--- a/ticket.html
+++ b/ticket.html
@@ -238,7 +238,7 @@
             </div>
           </div>
 
-          <hr class="ticket-divider" />
+          <!-- <hr class="ticket-divider" /> -->
 
           <!-- 周邊票組 -->
           <!-- <div id="merchandise-ticket" class="ticket-section">
@@ -257,8 +257,7 @@
               包含限定周邊商品的特殊票券組合，讓您同時獲得入場券與精美紀念品。
             </p> -->
 
-
-            <!-- <div class="ticket-sub-section">
+          <!-- <div class="ticket-sub-section">
               <div class="ticket-sub-layout">
                 <div class="ticket-sub-info">
                   <h4
@@ -309,8 +308,8 @@
               >
             </div> -->
 
-            <!-- 草率簿+票 -->
-            <div class="ticket-sub-section">
+          <!-- 草率簿+票 -->
+          <!-- <div class="ticket-sub-section">
               <div class="ticket-sub-layout">
                 <div class="ticket-sub-info">
                   <h4 data-zh="草率簿+票" data-en="Notebook + Ticket">
@@ -357,7 +356,7 @@
                 >立即購票</a
               >
             </div>
-          </div>
+          </div> -->
 
           <hr class="ticket-divider" />
 
