ticket let's go

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ font in use: Poppins, PicNic, and Inclusive Sans
     <!-- moshimoshi -->
     <nav>
       <a class="vertical about" onclick="myAbout()">ABOUT</a>
-      <div onclick="openThis(openopencall);" class="open-call">
+      <!-- <div onclick="openThis(openopencall);" class="open-call">
         <span>OPEN CALL</span><br />
         <span>OPEN CALL</span><br />
         <span>OPEN CALL</span><br />
@@ -105,7 +105,30 @@ font in use: Poppins, PicNic, and Inclusive Sans
       </div>
       <a onclick="openThis(openopencall);" class="vertical open-call-m"
         >OPEN CALL</a
-      >
+      > -->
+      <div class="open-call">
+        <a href="ticket.html" style="color: ghostwhite">
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span><br />
+          <span>GET A TICKET</span></a
+        >
+      </div>
+      <a href="ticket.html" class="vertical open-call-m">GET A TICKET</a>
       <a
         href="https://nmhw.taipeiartbookfair.com/"
         target="_blank"
@@ -148,6 +171,18 @@ font in use: Poppins, PicNic, and Inclusive Sans
         <br />
         [重要資訊 Info Log]<br />
         <div id="info-log" style="white-space: pre-wrap">🚧 讀取中…</div>
+        <div
+          style="
+            background-color: blueviolet;
+
+            border-radius: 10px;
+            text-align: center;
+          "
+        >
+          <a href="ticket.html" style="color: white; text-decoration: none">
+            購票頁面 | GET A TICKET</a
+          >
+        </div>
       </div>
     </div>
 
