--- a/mainpage.html
+++ b/mainpage.html
@@ -265,12 +265,13 @@
             style="display: flex; align-items: center; gap: 10px"
           >
             <form
-              action=""
+              action="https://double-grass.us1.list-manage.com/subscribe/post?u=d8c7b3dc8532a4323466edd2d&amp;id=ca8c067b40&amp;f_id=009678e2f0"
               method="post"
               id="mc-embedded-subscribe-form"
               name="mc-embedded-subscribe-form"
               class="validate"
-              target="_blank"
+              target="_self"
+              novalidate=""
               style="display: flex; align-items: center; gap: 10px; margin: 0"
             >
               <span
@@ -347,7 +348,7 @@
               <div style="position: absolute; left: -5000px" aria-hidden="true">
                 <input
                   type="text"
-                  name="b_YOUR_BOT_FIELD_HERE"
+                  name="b_d8c7b3dc8532a4323466edd2d_ca8c067b40"
                   tabindex="-1"
                   value=""
                 />
