--- a/ticket.html
+++ b/ticket.html
@@ -323,6 +323,69 @@
         transform: scale(0.95);
       }
 
+      /* Tablet Responsive Styles for Ticket Page */
+      @media (max-width: 1024px) and (min-width: 769px) {
+        .ticket-hero-title {
+          font-size: 5rem;
+          line-height: 1.3;
+        }
+
+        .ticket-main-container {
+          padding: 20px;
+          gap: 25px;
+        }
+
+        .ticket-nav {
+          width: 25vw;
+        }
+
+        .ticket-content {
+          width: 70%;
+        }
+
+        .ticket-intro {
+          font-size: 1.1rem;
+          line-height: 1.7;
+          margin-bottom: 60px;
+        }
+
+        .ticket-section-title {
+          font-size: 1.8rem;
+          letter-spacing: 0.8rem;
+          padding: 10px;
+        }
+
+        .ticket-sub-layout {
+          gap: 15px;
+        }
+
+        .ticket-sub-info h4 {
+          font-size: 1.3rem;
+        }
+
+        .ticket-sub-desc {
+          font-size: 1rem;
+          line-height: 1.5;
+        }
+
+        .ticket-price {
+          font-size: 1.4rem;
+        }
+
+        .ticket-btn {
+          font-size: 1rem;
+          padding: 10px 18px;
+        }
+
+        .ticket-section {
+          gap: 20px;
+        }
+
+        .ticket-section-image {
+          width: 100px;
+        }
+      }
+
       /* Mobile Responsive Styles for Ticket Page */
       @media (max-width: 768px) {
         .ticket-hero {
@@ -474,17 +537,6 @@
     <div class="ticket-hero">
       <div class="ticket-hero-circle-left"></div>
       <div class="ticket-hero-content">
-        <p
-          class="ticket-hero-title"
-          style="
-            z-index: 100;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-          "
-        >
-          Tickets | 購票
-        </p>
         <img
           src="image/tickets/Heand0007.png"
           alt="票券"
