--- a/ticket.html
+++ b/ticket.html
@@ -537,6 +537,17 @@
     <div class="ticket-hero">
       <div class="ticket-hero-circle-left"></div>
       <div class="ticket-hero-content">
+        <p
+          class="ticket-hero-title"
+          style="
+            z-index: 100;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+          "
+        >
+          Tickets | 購票
+        </p>
         <img
           src="image/tickets/Heand0007.png"
           alt="票券"
