--- a/ticket.html
+++ b/ticket.html
@@ -24,8 +24,6 @@
           #455e44 97%,
           ghostwhite 100%
         );
-        overflow-x: hidden;
-        width: 100vw;
       }
 
       .ticket-hero {
@@ -328,8 +326,9 @@
       /* Tablet Responsive Styles for Ticket Page */
       @media (max-width: 1024px) and (min-width: 769px) {
         .ticket-hero-title {
-          font-size: 5rem;
-          line-height: 1.3;
+          font-size: 3.5rem;
+          line-height: 1.4;
+          letter-spacing: 0.2rem;
         }
 
         .ticket-main-container {
