--- a/ticket.html
+++ b/ticket.html
@@ -325,10 +325,17 @@
 
       /* Tablet Responsive Styles for Ticket Page */
       @media (max-width: 1024px) and (min-width: 769px) {
+        .ticket-hero {
+          overflow-x: hidden;
+          max-width: 100%;
+        }
         .ticket-hero-title {
-          font-size: 3.5rem;
-          line-height: 1.4;
-          letter-spacing: 0.2rem;
+          font-size: 3rem;
+          line-height: 1.1;
+          letter-spacing: 0.1rem;
+          white-space: nowrap;
+          width: auto;
+          max-width: 90%;
         }
 
         .ticket-main-container {
@@ -394,9 +401,11 @@
           justify-content: space-between;
           height: 100vh;
           width: 100vw;
+          max-width: 100%;
           right: 0;
           margin: 0;
           padding: 20px 0;
+          overflow-x: hidden;
         }
 
         .ticket-hero-circle-left {
@@ -406,6 +415,7 @@
           transform: translateX(-50%) translateY(-40%);
           width: 60vw;
           height: 60vw;
+          max-width: 100vw;
         }
 
         .ticket-hero-circle-right {
@@ -416,6 +426,7 @@
           width: 60vw;
           height: 60vw;
           right: auto;
+          max-width: 100vw;
           background: linear-gradient(
             0deg,
             #455e44 0%,
@@ -534,7 +545,7 @@
       }
     </style>
   </head>
-  <body class="ticket-page">
+  <body class="ticket-page" style="overflow-x: hidden; max-width: 100vw">
     <div class="ticket-hero">
       <div class="ticket-hero-circle-left"></div>
       <div class="ticket-hero-content">
