--- a/ticket.html
+++ b/ticket.html
@@ -584,8 +584,10 @@
             left: 50%;
             transform: translateX(-50%);
           "
+          data-zh="購票"
+          data-en="Tickets"
         >
-          Tickets | 購票
+          購票
         </p>
         <img
           src="image/tickets/Heand0007.png"
