--- a/ticket.html
+++ b/ticket.html
@@ -29,10 +29,12 @@
       html {
         overflow-x: hidden;
         max-width: 100%;
+        scroll-behavior: smooth;
       }
 
       body {
         overflow-x: hidden;
+        overflow-y: auto;
         max-width: 100vw;
         margin: 0;
         padding: 0;
@@ -424,15 +426,17 @@
       /* Mobile Responsive Styles for Ticket Page */
       @media (max-width: 768px) {
         .ticket-hero {
+          position: static !important;
           flex-direction: column;
           justify-content: space-between;
-          height: 100vh;
-          width: 100vw;
+          min-height: 100vh;
+          width: 100% !important;
           max-width: 100%;
-          right: 0;
+          right: auto;
           margin: 0;
           padding: 20px 0;
           overflow-x: hidden;
+          overflow-y: visible;
         }
 
         .ticket-hero-circle-left {
