--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1596,11 +1596,11 @@
                     style="margin-top: 0.5em; font-size: 1rem"
                     id="manual-desc"
                   >
-                    展前將提供完整《攤主手冊》供您下載，內含報到流程、進撤場時間、攤位樣式參考、現場規範與《罰金手冊》等所有參展須知，請務必詳閱並依說明準備。
+                    請務必詳閱並依說明準備。內含展會流程、細節、注意事項與攤位樣式、現場規範與《場地違規處理與罰則手冊》等所有參展須知。
                   </div>
                   <div id="manual-annouce-time">
                     <a
-                      href="https://your-shopline-link.com"
+                      href="https://drive.google.com/drive/folders/1Hvz9sxlOw7NObvuF2k-wJbwn9YAaDonQ?usp=sharing"
                       target="_blank"
                       id="manual-link"
                       >下載 Download</a
