--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1574,7 +1574,7 @@
                     <span id="ticket-discountcode"></span>
                     <br /><br />
                     <a
-                      href="https://your-shopline-link.com"
+                      href="https://tour.ibon.com.tw/event/e2508000034ilw7"
                       target="_blank"
                       id="ticket-link"
                       >購票連結</a
